--- a/home.html
+++ b/home.html
@@ -179,7 +179,7 @@
         </div>
 		<br>
         <p>&copy; 2024 Goal 14: Life Below Water. All Rights Reserved.</p><br><br><br>
-        <p style="background-color:white; padding:25px"><a href="editor.html" target="_blank">Visit Editor's Page</a></p>
+        <p style="background-color:white; padding:25px"><a href="editor_student2.html" target="_blank">Visit Editor's Page</a></p>
     </footer>
 
 </body>
