--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
                 <ul>
                     <li><a href="home.html" class="active">Home</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
-                    <li><a href="shop.html">Shop</a></li>
+                    <li><a href="shop cw.html">Shop</a></li>
                     <li><a href="profile.html">Profile</a></li>
                     <li><a href="feedback.html">Feedback</a></li>
                     <li><a href="sitemap.html">Sitemap</a></li>
