--- a/gallery.html
+++ b/gallery.html
@@ -14,7 +14,7 @@
 		<a href="home.html"><img src="Sustainable_Development_Goal_14LifeBelowWater.svg" alt="Logo" class="logo"></a>
         <a href="home.html">HOME</a>
         <a href="gallery.html" class="active">GALLERY</a>
-        <a href="shop.html">SHOP</a>
+        <a href="shop cw.html">SHOP</a>
         <a href="feedback.html">FEEDBACK</a>
         <a href="profile.html">USER PROFILE</a>
         <a href="team.html">ABOUT US</a>
