--- a/profile.html
+++ b/profile.html
@@ -13,7 +13,7 @@
     <header>
         <div class="header-content">
             <div class="logo">
-                <img src="14.png" alt="logo" width="80" height="80">
+                <img src="life-bw.png" alt="logo" width="80" height="80">
             </div>
             <nav>
                 <ul>
