--- a/gallery.html
+++ b/gallery.html
@@ -11,7 +11,7 @@
         <h1>Life Below Water</h1>
     </header>
     <nav id="top">
-		<a href="home.html"><img src="Sustainable_Development_Goal_14LifeBelowWater.svg" alt="Logo" class="logo"></a>
+		<a href="home.html"><img src="life-bw.png" alt="Logo" class="logo"></a>
         <a href="home.html">HOME</a>
         <a href="gallery.html" class="active">GALLERY</a>
         <a href="shop cw.html">SHOP</a>
