--- a/20232974content page.html
+++ b/20232974content page.html
@@ -4,7 +4,7 @@
     <title>Life on land</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="content page.css">
+    <link rel="stylesheet" href="20232974content page.css">
 </head>
 <body>
     <div class="main">
