--- a/20232974content page.html
+++ b/20232974content page.html
@@ -11,7 +11,7 @@
         <header>
             <div class="header-content">
                 <div class="logo">
-                    <img src="14.pnglife-bw.png" alt="logo" width="80" height="80">
+                    <img src="life-bw.png" alt="logo" width="80" height="80">
                 </div>
                 <nav>
                     <ul>
