Add files and update content.html

--- a/20232912page editor.html
+++ b/20232912page editor.html
@@ -60,7 +60,7 @@
                     <div class="card-content">
                         <h1>content</h1>
                         <p>This is an content page I designed using HTML and CSS. It showcases additional content or functionality.</p>
-                        <br><a href="content.html" class="card-button" target="_blank">LINK TO CONTENT PAGE</a>
+                        <br><a href="St1_content.html" class="card-button" target="_blank">LINK TO CONTENT PAGE</a>
                     </div>
                 </div>
             </div>
